test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-97.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "main",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "__array_element",
            "type": "u32",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "[u32; 1]",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
